# AirplayServer

app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/lib/: CMakeLists.txt  mirror_buffer.c  raop.c
app/src/main/cpp/lib/fdk-aac/: CMakeLists.txt
app/src/main/cpp/mDNSResponder/: CMakeLists.txt
app/src/main/cpp/mDNSResponder/mDNSShared/: dnssd_clientstub.c
